Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
proton-c-0.17.0
-
Debian testing. GCC nightly build from https://hub.docker.com/r/jdanekrh/nightly-gccgo-trunk-docker-image/
-
Patch
Description
The following error prevents from compiling the cpp binding with g++ 7.0 snaphot
- /qpid-proton/proton-c/bindings/cpp/include/proton/container.hpp:219:48: error: 'std::function' has not been declared
see complete error messages in comments below
Attachments
Issue Links
- is a clone of
-
PROTON-1375 Compile without warnings under clang 4.0
- Closed
- links to