PROTON-1379: [C++ binding] Add #if'd #include <functional>