proton-c/bindings/cpp/include/proton/container.hpp
@@ -31,6 +31,10 @@
 
 #include <string>
 
+#ifdef PN_CPP_HAS_STD_FUNCTION
+#include <functional>
+#endif
+
 namespace proton {
 
 /// A top-level container of connections, sessions, senders, and
